git-svn-id: https://iritgo-aktera.googlecode.com/svn/trunk@14 71e8ea69-9a4e-8955-45a5-bfab6559e1dc

--- a/aktera-reporting/pom.xml
+++ b/aktera-reporting/pom.xml
@@ -65,6 +65,10 @@
 					<artifactId>jcommon</artifactId>
 					<groupId>jfree</groupId>
 				</exclusion>
+				<exclusion>
+					<artifactId>commons-collections</artifactId>
+					<groupId>commons-collections</groupId>
+				</exclusion>
 			</exclusions>
 		</dependency>
 		<dependency>
