--- a/aktera-aktario/pom.xml
+++ b/aktera-aktario/pom.xml
@@ -50,5 +50,10 @@
 			<artifactId>iritgo-aktera-event</artifactId>
 			<version>2.2.1</version>
 		</dependency>
+		<dependency>
+			<groupId>de.iritgo.aktera</groupId>
+			<artifactId>iritgo-aktera-address</artifactId>
+			<version>2.3.1</version>
+		</dependency>
 	</dependencies>
 </project>
