--- a/aktera-core/pom.xml
+++ b/aktera-core/pom.xml
@@ -131,5 +131,10 @@
 			<artifactId>iritgo-simplelife</artifactId>
 			<version>1.4.1</version>
 		</dependency>
+		<dependency>
+			<groupId>javax.annotation</groupId>
+			<artifactId>jsr250-api</artifactId>
+			<version>1.0</version>
+		</dependency>
 	</dependencies>
 </project>
