--- a/aktera-script/src/main/resources/AkteraScriptResources.properties
+++ b/aktera-script/src/main/resources/AkteraScriptResources.properties
@@ -1,6 +1,7 @@
 code = Code
 editScript = Script bearbeiten
 groovy = Groovy
+javascript = JavaScript
 language = Sprache
 manageScripts = Scripte bearbeiten
 opt- = ---
