--- a/aktera-script/pom.xml
+++ b/aktera-script/pom.xml
@@ -56,5 +56,10 @@
 				</exclusion>
 			</exclusions>
 		</dependency>
+		<dependency>
+    		<groupId>rhino</groupId>
+    		<artifactId>js</artifactId>
+    		<version>1.7R2</version>
+		</dependency>
 	</dependencies>
 </project>
