RESOLVED - bug 919: LDAP: Sucht standardmäßig nach Telex und nicht nach Telefax https://io.iptell.telcat.de/bugs/show_bug.cgi?id=919
git-svn-id: https://iritgo-aktera.googlecode.com/svn/trunk@36 71e8ea69-9a4e-8955-45a5-bfab6559e1dc

--- a/aktera-address/src/main/resources/AkteraAddressResources.properties
+++ b/aktera-address/src/main/resources/AkteraAddressResources.properties
@@ -30,8 +30,8 @@ global = Global
 googleAddressStore = Google-Kontakte
 ldapAddressStore = LDAP Verzeichnis
 ldapAttributeNames = Attributnamen
-ldapAttributeNamesTip = Hier können Entsprechungen für LDAP-Attribute gesetzt werden. Vordefiniert sind:<br><br>lastName = sn<br>firstName = givenName<br>company = o<br>division = ou<br>position = title <br>street = street<br>city = l<br>postalCode = postalCode<br>country = destinationIndicator<br>email = mail<br>web = seeAlso<br>businessNumber = telephoneNumber<br>businessFaxNumber = telexNumber<br>remark = description<br><br>Zusätzlich können noch Entsprechungen für folgende Felder definiert werden:<br><br>salutation<br>contactNumber<br>companyNumber<br>businessMobileNumber<br>businessDirectDialNumber<br>privateNumber<br>privateMobileNumber<br>privateFaxNumber<br>voipNumber
-ldapAttributeNamesTip = lastName = sn<br>firstName = givenName<br>company = o<br>street = street<br>city = city<br>businessNumber = telephoneNumber<br>businessFaxNumber = telexNumber
+ldapAttributeNamesTip = Hier können Entsprechungen für LDAP-Attribute gesetzt werden. Vordefiniert sind:<br><br>lastName = sn<br>firstName = givenName<br>company = o<br>division = ou<br>position = title <br>street = street<br>city = l<br>postalCode = postalCode<br>country = destinationIndicator<br>email = mail<br>web = seeAlso<br>businessNumber = telephoneNumber<br>businessFaxNumber = facsimileTelephoneNumber<br>remark = description<br><br>Zusätzlich können noch Entsprechungen für folgende Felder definiert werden:<br><br>salutation<br>contactNumber<br>companyNumber<br>businessMobileNumber<br>businessDirectDialNumber<br>privateNumber<br>privateMobileNumber<br>privateFaxNumber<br>voipNumber
+ldapAttributeNamesTip = lastName = sn<br>firstName = givenName<br>company = o<br>street = street<br>city = city<br>businessNumber = telephoneNumber<br>businessFaxNumber = facsimileTelephoneNumber
 ldapAuthDn = Anmelde-DN
 ldapAuthPassword = Anmelde-Passwort
 ldapBaseDn = Basis-DN
@@ -43,7 +43,7 @@ ldapQuery = Such-Ausdruck
 ldapQueryTip = Wenn hier nichts eingetragen ist, wird '(objectclass=person)' verwendet.
 ldapScope = Such-Bereich (Scope)
 ldapSearchAttributes = Such-Attribute
-ldapSearchAttributesTip = Geben Sie hier alle Attribute an, nach denen gesucht werden sollen (Standard: sn, cn, telephoneNumber, mobile, telexNumber).
+ldapSearchAttributesTip = Geben Sie hier alle Attribute an, nach denen gesucht werden sollen (Standard: sn, cn, telephoneNumber, mobile, facsimileTelephoneNumber).
 ldapScopeSUBTREE = Gesamter Baum (Subtree)
 localAddressStore = Lokale Datenbank
 category = Kategorie
