git-svn-id: https://iritgo-aktera.googlecode.com/svn/trunk@48 71e8ea69-9a4e-8955-45a5-bfab6559e1dc

--- a/pom.xml
+++ b/pom.xml
@@ -109,7 +109,9 @@
 						<configuration>
 							<src>${basedir}/src/main/resources</src>
 							<dest>${project.build.outputDirectory}</dest>
-							<includes>**/*.properties</includes>
+							<includes>
+								<include>**/*.properties</include>
+							</includes>
 							<encoding>UTF-8</encoding>
 						</configuration>
 					</execution>
