git-svn-id: https://iritgo-aktera.googlecode.com/svn/trunk@49 71e8ea69-9a4e-8955-45a5-bfab6559e1dc

--- a/pom.xml
+++ b/pom.xml
@@ -101,6 +101,7 @@
 			<plugin>
 				<groupId>org.codehaus.mojo</groupId>
 				<artifactId>native2ascii-maven-plugin</artifactId>
+				<version>1.0-alpha-1</version>
 				<executions>
 					<execution>
 						<goals>
@@ -109,9 +110,7 @@
 						<configuration>
 							<src>${basedir}/src/main/resources</src>
 							<dest>${project.build.outputDirectory}</dest>
-							<includes>
-								<include>**/*.properties</include>
-							</includes>
+							<includes>**/*.properties</includes>
 							<encoding>UTF-8</encoding>
 						</configuration>
 					</execution>
