--- a/.settings/org.springframework.ide.eclipse.beans.core.prefs
+++ b/.settings/org.springframework.ide.eclipse.beans.core.prefs
@@ -1,3 +1,3 @@
-#Mon Aug 15 10:08:44 GMT 2011
+#Tue Nov 22 11:40:19 CET 2011
 eclipse.preferences.version=1
 org.springframework.ide.eclipse.beans.core.ignoreMissingNamespaceHandler=false
