--- a/aktera-threading/.settings/org.springframework.ide.eclipse.beans.core.prefs
+++ b/aktera-threading/.settings/org.springframework.ide.eclipse.beans.core.prefs
@@ -1,3 +1,3 @@
-#Tue Aug 16 10:42:57 GMT 2011
+#Tue Nov 22 11:40:20 CET 2011
 eclipse.preferences.version=1
 org.springframework.ide.eclipse.beans.core.ignoreMissingNamespaceHandler=false
