--- a/aktera-address/src/main/resources/AkteraAddressResources.properties
+++ b/aktera-address/src/main/resources/AkteraAddressResources.properties
@@ -13,6 +13,8 @@ addressStoreSystemStore = System-Quelle
 addressStoreType = Art der Adress-Datenquelle
 authPassword = Anmelde-Passwort
 authUser = Anmelde-Name
+category = Kategorie
+checkOwner = Besitzer prüfen
 companyNumber = Firmen-Nummer
 contactNumber = Kontakt-Nummer
 createAddressStore = Neue Adress-Datenquelle anlegen
@@ -35,23 +37,22 @@ ldapAttributeNamesTip = lastName = sn<br>firstName = givenName<br>company = o<br
 ldapAuthDn = Anmelde-DN
 ldapAuthPassword = Anmelde-Passwort
 ldapBaseDn = Basis-DN
-ldapScopeLEVEL = Eine Ebene (Level)
 ldapMaxEntries = Max. Anzahl an Ergebniseinträgen
 ldapPageSize = Ergebnis-Seitengröße (Page size)
 ldapPageSizeTip = Für einen OpenLDAP-Server müssen Sie hier 0 eintragen.
 ldapQuery = Such-Ausdruck
 ldapQueryTip = Wenn hier nichts eingetragen ist, wird '(objectclass=person)' verwendet.
 ldapScope = Such-Bereich (Scope)
+ldapScopeLEVEL = Eine Ebene (Level)
+ldapScopeSUBTREE = Gesamter Baum (Subtree)
 ldapSearchAttributes = Such-Attribute
 ldapSearchAttributesTip = Geben Sie hier alle Attribute an, nach denen gesucht werden sollen (Standard: sn, cn, telephoneNumber, mobile, facsimileTelephoneNumber).
-ldapScopeSUBTREE = Gesamter Baum (Subtree)
 localAddressStore = Lokale Datenbank
-category = Kategorie
-checkOwner = Besitzer prüfen
 manageAddressStores = Adress-Datenquellen verwalten
 newAddressEntry = Neuer Adressbuch-Eintrag: {0}
-notEmptyAddressStoreCannotBeDeleted = In der Adress-Quelle existieren noch Addressbucheinträge. Bitte löschen Sie erst alle Einträge!
 noLastNameOrCompanyTagFound = Es wurde ein Eintrag ohne Nachname und Firmennamen nicht ins Adressbuch aufgenommen.
+notEmptyAddressStoreCannotBeDeleted = In der Adress-Quelle existieren noch Addressbucheinträge. Bitte löschen Sie erst alle Einträge!
+nullStore = &nbsp;
 numAddressEntriesWillBeCreated = Es werden {0} Adressen angelegt.
 numAddressEntriesWillBeUpdated = Es werden {0} Adressen aktualisiert.
 oneOfLastNameOrCompanyMustBeFilled = Eines der Felder 'Nachname' oder 'Firma' muss ausgefüllt werden.
@@ -61,11 +62,11 @@ optgoogle = Google-Kontakte
 optldap = LDAP Verzeichnis
 optlocal = Lokale Datenbank
 permissionAddressAll = Adressbuch - Alle Funktionen
-permissionAddressView = Adressbuch - Anzeigen
 permissionAddressCreate = Adressbuch - Neuanlage
 permissionAddressDelete = Adressbuch - Löschen
 permissionAddressEdit = Adressbuch - Bearbeiten
 permissionAddressImport = Adressbuch - Importieren
+permissionAddressView = Adressbuch - Anzeigen
 personalAddressStore = Persönliches Adressbuch
 private = Privat
 shouldntSpecifyFirstNameWhenOnlyCompanyIsFilled = Das Feld 'Vorname' muss leer bleiben, wenn Sie eine Adresse für eine Firma anlegen.
