--- a/aktera-ui/pom.xml
+++ b/aktera-ui/pom.xml
@@ -63,5 +63,10 @@
 			<artifactId>validation-api</artifactId>
 			<version>1.0.0.GA</version>
 		</dependency>
+		<dependency>
+			<groupId>de.iritgo.aktera</groupId>
+			<artifactId>iritgo-aktera-vaadin</artifactId>
+			<version>2.3.1</version>
+		</dependency>
 	 	</dependencies>
 </project>
