git-svn-id: https://iritgo-aktera.googlecode.com/svn/trunk@86 71e8ea69-9a4e-8955-45a5-bfab6559e1dc

--- a/aktera-script/src/main/resources/AkteraScriptResources.properties
+++ b/aktera-script/src/main/resources/AkteraScriptResources.properties
@@ -5,5 +5,6 @@ javascript = JavaScript
 language = Sprache
 manageScripts = Scripte bearbeiten
 opt- = ---
+python = Python
 script = Script
 scriptCodeContainsErrors = Das Script enthält Fehler!<br />
