--- a/aktera-script/pom.xml
+++ b/aktera-script/pom.xml
@@ -61,5 +61,10 @@
     		<artifactId>js</artifactId>
     		<version>1.7R2</version>
 		</dependency>
-	</dependencies>
+		<dependency>
+    		<groupId>org.python</groupId>
+    		<artifactId>jython</artifactId>
+    		<version>2.5.0</version>
+		</dependency>
+    </dependencies>
 </project>
