git-svn-id: https://iritgo-aktera.googlecode.com/svn/trunk@89 71e8ea69-9a4e-8955-45a5-bfab6559e1dc

--- a/aktera-base/src/main/resources/AkteraResources.properties
+++ b/aktera-base/src/main/resources/AkteraResources.properties
@@ -270,7 +270,7 @@
 1.month.sep = September
 1.province.DE.BE = Berlin
 1.province.DE.BR = Brandenburg
-1.province.DE.BW = Baden-Würtemberg
+1.province.DE.BW = Baden-Württemberg
 1.province.DE.BY = Bayern
 1.province.DE.HB = Bremen
 1.province.DE.HE = Hessen
