--- a/aktera-base/pom.xml
+++ b/aktera-base/pom.xml
@@ -120,5 +120,10 @@
 			<artifactId>iritgo-aktera-permissions-ui</artifactId>
 			<version>2.3.1</version>
 		</dependency>
+		<dependency>
+			<groupId>de.iritgo.aktera</groupId>
+			<artifactId>iritgo-aktera-address</artifactId>
+			<version>2.3.2</version>
+		</dependency>
 	</dependencies>
 </project>
