--- a/aktera-command/.project
+++ b/aktera-command/.project
@@ -6,6 +6,21 @@
 	</projects>
 	<buildSpec>
 		<buildCommand>
+			<name>com.evelopers.unimod.generator.symbian.symbianbuilder</name>
+			<arguments>
+			</arguments>
+		</buildCommand>
+		<buildCommand>
+			<name>com.evelopers.unimod.generator.xml.xmlbuilder</name>
+			<arguments>
+			</arguments>
+		</buildCommand>
+		<buildCommand>
+			<name>com.evelopers.unimod.generator.java.javabuilder</name>
+			<arguments>
+			</arguments>
+		</buildCommand>
+		<buildCommand>
 			<name>org.eclipse.jdt.core.javabuilder</name>
 			<arguments>
 			</arguments>
@@ -17,6 +32,7 @@
 		</buildCommand>
 	</buildSpec>
 	<natures>
+		<nature>com.evelopers.unimod.unimodnature</nature>
 		<nature>org.eclipse.jdt.core.javanature</nature>
 		<nature>org.eclipse.m2e.core.maven2Nature</nature>
 	</natures>
