--- a/aktera-webservices/pom.xml
+++ b/aktera-webservices/pom.xml
@@ -35,16 +35,24 @@
 		<dependency>
 			<groupId>org.springframework.ws</groupId>
 			<artifactId>spring-ws-core</artifactId>
-			<version>2.0.2.RELEASE</version>
+			<version>2.0.4.RELEASE</version>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework.ws</groupId>
 			<artifactId>spring-ws-security</artifactId>
-			<version>2.0.2.RELEASE</version>
+			<version>2.0.4.RELEASE</version>
 			<exclusions>
 				<exclusion>
 					<groupId>org.springframework.security</groupId>
 					<artifactId>spring-security-core</artifactId>
+				</exclusion>
+				<exclusion>
+					<groupId>com.sun.xml.wsit</groupId>
+					<artifactId>xws-security</artifactId>
+				</exclusion>
+				<exclusion>
+					<groupId>com.sun.xml.wsit</groupId>
+					<artifactId>wsit-rt</artifactId>
 				</exclusion>
 			</exclusions>
 		</dependency>
