--- a/aktera-core/pom.xml
+++ b/aktera-core/pom.xml
@@ -261,5 +261,10 @@
 			<artifactId>excalibur-pool-instrumented</artifactId>
 			<version>2.1</version>
 		</dependency>
+		<dependency>
+			<groupId>cglib</groupId>
+			<artifactId>cglib</artifactId>
+			<version>2.2.2</version>
+		</dependency>
 	</dependencies>
 </project>
