git-svn-id: https://iritgo-aktera.googlecode.com/svn/trunk@123 71e8ea69-9a4e-8955-45a5-bfab6559e1dc

--- a/aktera-address/src/main/resources/AkteraAddressResources.properties
+++ b/aktera-address/src/main/resources/AkteraAddressResources.properties
@@ -1,3 +1,7 @@
+numberNormalization = Rufnummer-Normalisierung
+numberNormalizationTypeNO_NORMALIZATION = Keine Normalisierung
+numberNormalizationTypeADD_INTERNATIONAL_COUNTRY_PREFIX = Internationale Vorwahl und Länderkennung hinzufügen
+numberNormalizationTypeREMOVE_PREFIX = Alle Vorwahlen entfernen
 addressAssignedToUserCannotBeDeleted = Die Adresse "{0}" ist einem Benutzer zugeordnet und kann nicht gelöscht werden.
 addressbook = Adressbuch
 addressImportHandlerAnalyzeError = Analyse-Fehler: {0}
