--- a/aktera-base/src/main/resources/AkteraResources.properties
+++ b/aktera-base/src/main/resources/AkteraResources.properties
@@ -823,3 +823,11 @@ yes = Ja
 youAreNotAllowedToLogin = Sie sind nicht berechtigt, sich am Web-Interface anzumelden.
 youNeedToProvideALoginName = Bitte geben Sie einen Benutzernamen ein.
 youNeedToProvideAPassword = Bitte geben Sie ein Passwort ein.
+periodNone = ---
+periodOneHour = Eine Stunde
+periodOneDay = Ein Tag
+periodOneWeek = Eine Woche
+periodOneMonth = Ein Monat (30 Tage)
+periodOneQuarter = Ein Quartal (3 Monate)
+periodOneHalfYear = Ein Halbjahr
+periodOneYear = Ein Jahr
