--- a/aktera-journal/src/main/resources/AkteraJournalResources.properties
+++ b/aktera-journal/src/main/resources/AkteraJournalResources.properties
@@ -4,3 +4,6 @@ journalMessage = Ereignis
 journalOccurredAt = Datum
 journalDeleteAll = Journal komplett löschen
 journalDashboard = Dashboard-Nachrichten
+journalCleanupNow = Journal Daten jetzt bereinigen
+journalCleanupSuccessfull = Journal Daten wurden bereinigt
+journalCleanupNowConfirm = Sollen die Journal Daten wirklich bereinigt werden?\\nHierbei werden Daten unwiederruflich gelöscht!
