git-svn-id: https://iritgo-aktera.googlecode.com/svn/trunk@139 71e8ea69-9a4e-8955-45a5-bfab6559e1dc

--- a/aktera-base/src/main/resources/AkteraResources.properties
+++ b/aktera-base/src/main/resources/AkteraResources.properties
@@ -329,6 +329,7 @@ badLoginName = Der von Ihnen angegebene Benutzername existiert nicht, oder Ihr B
 badPassword = Das von Ihnen eingegebene Passwort ist falsch!
 base = Basis
 birthDate = Geburtsdatum
+bulkImport = Massen-Import (Keine Dubletten-Prüfung)
 cancel = Abbrechen
 canChangePassword = Darf das Passwort ändern
 category = Kategorie
