git-svn-id: https://iritgo-aktera.googlecode.com/svn/trunk@140 71e8ea69-9a4e-8955-45a5-bfab6559e1dc

--- a/aktera-address/src/main/resources/AkteraAddressResources.properties
+++ b/aktera-address/src/main/resources/AkteraAddressResources.properties
@@ -1,9 +1,6 @@
-numberNormalization = Rufnummer-Normalisierung
-numberNormalizationTypeNO_NORMALIZATION = Keine Normalisierung
-numberNormalizationTypeADD_INTERNATIONAL_COUNTRY_PREFIX = Internationale Vorwahl und Länderkennung hinzufügen
-numberNormalizationTypeREMOVE_PREFIX = Alle Vorwahlen entfernen
 addressAssignedToUserCannotBeDeleted = Die Adresse "{0}" ist einem Benutzer zugeordnet und kann nicht gelöscht werden.
 addressbook = Adressbuch
+addressImportBulkMode = * Bulk-Import Modus
 addressImportHandlerAnalyzeError = Analyse-Fehler: {0}
 addressImportHandlerPerformError = Ausführungsfehler: {0}
 addressImportHandlerStoreNotFound = Address-Quelle nicht gefunden.
@@ -59,6 +56,10 @@ notEmptyAddressStoreCannotBeDeleted = In der Adress-Quelle existieren noch Addre
 nullStore = &nbsp;
 numAddressEntriesWillBeCreated = Es werden {0} Adressen angelegt.
 numAddressEntriesWillBeUpdated = Es werden {0} Adressen aktualisiert.
+numberNormalization = Rufnummer-Normalisierung
+numberNormalizationTypeADD_INTERNATIONAL_COUNTRY_PREFIX = Internationale Vorwahl und Länderkennung hinzufügen
+numberNormalizationTypeNO_NORMALIZATION = Keine Normalisierung
+numberNormalizationTypeREMOVE_PREFIX = Alle Vorwahlen entfernen
 oneOfLastNameOrCompanyMustBeFilled = Eines der Felder 'Nachname' oder 'Firma' muss ausgefüllt werden.
 opt- = ---
 optAllAddresss = - Alle Adressbücher -
