git-svn-id: https://iritgo-aktera.googlecode.com/svn/trunk@141 71e8ea69-9a4e-8955-45a5-bfab6559e1dc

--- a/aktera-address/src/main/resources/AkteraAddressResources.properties
+++ b/aktera-address/src/main/resources/AkteraAddressResources.properties
@@ -1,3 +1,4 @@
+numAddressInSekAdded = Es sind {0} Adressen in {1} Sek. hinzugefügt worden
 addressAssignedToUserCannotBeDeleted = Die Adresse "{0}" ist einem Benutzer zugeordnet und kann nicht gelöscht werden.
 addressbook = Adressbuch
 addressImportBulkMode = * Bulk-Import Modus
