--- a/aktera-base/src/main/resources/AkteraResources.properties
+++ b/aktera-base/src/main/resources/AkteraResources.properties
@@ -583,6 +583,7 @@ no = Nein
 noCsvTypeSpecified = Sie müssen die Art des CSV-Imports festlegen.
 noEntriesFound = Es wurden keine Einträge gefunden
 noImportFileGiven = Sie müssen eine Importdatei angeben.
+notAHostname = Bitte geben Sie einen gültigen Hostnamen ein.
 notAIpAddress = Bitte geben Sie eine gültige IP-Adresse ein.
 notAMacAddress = Bitte geben Sie eine gültige MAC-Adresse ein.
 notAnEmail = Bitte geben Sie eine gültige E-Mail-Adresse ein.
@@ -627,6 +628,14 @@ passwordRepeat = Passwort wiederholen
 passwordsDontMatch = Die Passwörter stimmen nicht überein
 pdf = PDF
 period = Zeitraum
+periodNone = ---
+periodOneDay = Ein Tag
+periodOneHalfYear = Ein Halbjahr
+periodOneHour = Eine Stunde
+periodOneMonth = Ein Monat (30 Tage)
+periodOneQuarter = Ein Quartal (3 Monate)
+periodOneWeek = Eine Woche
+periodOneYear = Ein Jahr
 permission = Berechtigung
 permissionClientLogin = Client - Anmeldung
 permissionName = Berechtigung
@@ -824,11 +833,3 @@ yes = Ja
 youAreNotAllowedToLogin = Sie sind nicht berechtigt, sich am Web-Interface anzumelden.
 youNeedToProvideALoginName = Bitte geben Sie einen Benutzernamen ein.
 youNeedToProvideAPassword = Bitte geben Sie ein Passwort ein.
-periodNone = ---
-periodOneHour = Eine Stunde
-periodOneDay = Ein Tag
-periodOneWeek = Eine Woche
-periodOneMonth = Ein Monat (30 Tage)
-periodOneQuarter = Ein Quartal (3 Monate)
-periodOneHalfYear = Ein Halbjahr
-periodOneYear = Ein Jahr
