git-svn-id: https://iritgo-aktera.googlecode.com/svn/trunk@162 71e8ea69-9a4e-8955-45a5-bfab6559e1dc

--- a/aktera-base/src/main/resources/AkteraResources.properties
+++ b/aktera-base/src/main/resources/AkteraResources.properties
@@ -633,6 +633,7 @@ periodOneDay = Ein Tag
 periodOneHalfYear = Ein Halbjahr
 periodOneHour = Eine Stunde
 periodOneMonth = Ein Monat (30 Tage)
+period6Weeks = Halbes Quartal (6 Wochen)
 periodOneQuarter = Ein Quartal (3 Monate)
 periodOneWeek = Eine Woche
 periodOneYear = Ein Jahr
