git-svn-id: https://iritgo-aktera.googlecode.com/svn/trunk@167 71e8ea69-9a4e-8955-45a5-bfab6559e1dc

--- a/aktera-base/src/main/resources/AkteraResources.properties
+++ b/aktera-base/src/main/resources/AkteraResources.properties
@@ -599,6 +599,7 @@ noValidLicenseFoundDescription = Bitte überprüfen Sie die Installation Ihrer I
 noValidValuesDefined = Für dieses Feld wurden keine 'ValidValues' definiert.
 number = Nummer
 numUsersWillBeCreated = Es werden {0} Benutzer importiert.
+numUsersWillBeUpdated = Es werden {0} Benutzer aktualisiert.
 object = Objekt
 objectExistsValidation = Das Objekt ist leider schon vorhanden.
 objectId = Objekt Id
