git-svn-id: https://iritgo-aktera.googlecode.com/svn/trunk@172 71e8ea69-9a4e-8955-45a5-bfab6559e1dc

--- a/aktera-address/src/main/resources/AkteraAddressResources.properties
+++ b/aktera-address/src/main/resources/AkteraAddressResources.properties
@@ -31,6 +31,7 @@ editAddressStore = Adress-Datenquelle bearbeiten
 emptySearchReturnsAllEntries = Leere Suche liefert alle Einträge zurück
 global = Global
 googleAddressStore = Google-Kontakte
+internalNumberLength = Interne Rufnummernlänge
 ldapAddressStore = LDAP Verzeichnis
 ldapAttributeNames = Attributnamen
 ldapAttributeNamesTip = Hier können Entsprechungen für LDAP-Attribute gesetzt werden. Vordefiniert sind:<br><br>lastName = sn<br>firstName = givenName<br>company = o<br>division = ou<br>position = title <br>street = street<br>city = l<br>postalCode = postalCode<br>country = destinationIndicator<br>email = mail<br>web = seeAlso<br>businessNumber = telephoneNumber<br>businessFaxNumber = facsimileTelephoneNumber<br>remark = description<br><br>Zusätzlich können noch Entsprechungen für folgende Felder definiert werden:<br><br>salutation<br>contactNumber<br>companyNumber<br>businessMobileNumber<br>businessDirectDialNumber<br>privateNumber<br>privateMobileNumber<br>privateFaxNumber<br>voipNumber
@@ -49,6 +50,7 @@ ldapScopeSUBTREE = Gesamter Baum (Subtree)
 ldapSearchAttributes = Such-Attribute
 ldapSearchAttributesTip = Geben Sie hier alle Attribute an, nach denen gesucht werden sollen (Standard: sn, cn, telephoneNumber, mobile, facsimileTelephoneNumber).
 localAddressStore = Lokale Datenbank
+mainNumber = Kopfnummer
 manageAddressStores = Adress-Datenquellen verwalten
 newAddressEntry = Neuer Adressbuch-Eintrag: {0}
 noLastNameOrCompanyTagFound = Es wurde ein Eintrag ohne Nachname und Firmennamen nicht ins Adressbuch aufgenommen.
