--- a/aktera-address/pom.xml
+++ b/aktera-address/pom.xml
@@ -28,7 +28,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<artifactId>iritgo-aktera-address</artifactId>
 	<name>Iritgo Aktera Address</name>
-	<version>2.3.4</version>
+	<version>2.3.5</version>
 	<description>Provides address service to application modules</description>
 	<properties>
 		<main.basedir>${project.parent.basedir}</main.basedir>
@@ -88,6 +88,11 @@
 			<groupId>com.google.gdata</groupId>
 			<artifactId>gdata-contacts</artifactId>
 			<version>3.0</version>
+		</dependency>
+		<dependency>
+			<groupId>com.unboundid</groupId>
+			<artifactId>unboundid-ldapsdk</artifactId>
+			<version>2.3.1</version>
 		</dependency>
 	</dependencies>
 </project>
