git-svn-id: https://iritgo-aktera.googlecode.com/svn/trunk@173 71e8ea69-9a4e-8955-45a5-bfab6559e1dc

--- a/aktera-address/src/main/resources/AkteraAddressResources.properties
+++ b/aktera-address/src/main/resources/AkteraAddressResources.properties
@@ -50,7 +50,7 @@ ldapScopeSUBTREE = Gesamter Baum (Subtree)
 ldapSearchAttributes = Such-Attribute
 ldapSearchAttributesTip = Geben Sie hier alle Attribute an, nach denen gesucht werden sollen (Standard: sn, cn, telephoneNumber, mobile, facsimileTelephoneNumber).
 localAddressStore = Lokale Datenbank
-mainNumber = Kopfnummer
+mainNumber = Vorwahl + Kopfnummer
 manageAddressStores = Adress-Datenquellen verwalten
 newAddressEntry = Neuer Adressbuch-Eintrag: {0}
 noLastNameOrCompanyTagFound = Es wurde ein Eintrag ohne Nachname und Firmennamen nicht ins Adressbuch aufgenommen.
